cmake_minimum_required(VERSION 3.15)
project(astronomy_check)

message( STATUS "start running cmake...")
find_package(Boost 1.67.0)
set(CMAKE_CXX_STANDARD 20)
if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    set(astronomy_library /home/rohit/astronomy)
    include_directories(${astronomy_library}/include)
    add_executable(Executable test.cpp)
    TARGET_LINK_LIBRARIES(Executable LINK_PUBLIC_ ${Boost_LIBRARIES})
endif()
add_executable(astronomy_check test.cpp)
